--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,5 +16,8 @@
   <ion-button expand="full"
   (click)="downloadAndOpen(dummyPDFURL3)">Last ned PDF 3</ion-button>
 
+  <ion-button expand="full"
+  (click)="openLocalPDF()">Vis Lokal PDF</ion-button>
+
 
 </ion-content>
