addded ionic file opener

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,14 +10,12 @@
   <ion-button expand="full"
   (click)="downloadAndOpen(dummyPDFURL1)">Last ned PDF 1</ion-button>
 
-  <ion-button expand="full"
-  (click)="downloadAndOpen(dummyPDFURL2)">Last ned PDF 2</ion-button>
+
 
   <ion-button expand="full"
-  (click)="downloadAndOpen(dummyPDFURL3)">Last ned PDF 3</ion-button>
+  (click)="openWithIonicFileOpener()">Ionic File Opener</ion-button>
 
-  <ion-button expand="full"
-  (click)="openLocalPDF()">Vis Lokal PDF</ion-button>
+
 
 
 </ion-content>
